--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Unsplash</h1>
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
       <img src="loader.svg" alt="Loading" />
     </div>
     <!-- Image container -->
